--- a/new1.html
+++ b/new1.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="animate.min.css">
 <link rel="stylesheet" type="text/css" href="style.css">
 <div class="container">
-<h3 class=" animated bounceIn">Remianing time until Jun 30th</h3>
+<h3 class=" animated bounceIn">Remaining time until Jun 30th</h3>
 <h2 id="demo"></h2>
 <h4 class=" animated bounceIn">We have so far</h4>
 <h5 class=" animated bounceIn">names</h5>
