--- a/new1.html
+++ b/new1.html
@@ -4,11 +4,11 @@
 <link rel="stylesheet" href="animate.min.css">
 <link rel="stylesheet" type="text/css" href="style.css">
 <div class="container">
-<h3 class=" animated bounceIn">Remaining time until Jun 30th</h3>
+<h3 class=" animated bounceIn">Remaining time until June 30th</h3>
 <h2 id="demo"></h2>
 <h4 class=" animated bounceIn">We have so far</h4>
 <h5 class=" animated bounceIn">names</h5>
-<a class=" animated bounceIn">You can make a differnce!!!</a>
+<a class=" animated bounceIn">You can make a difference!!!</a>
 <h1 class=" animated infinite tada">404</h1> <!-- Upravovat podla poctu prekonvertovanych --> 
 </div>
 </head>
